public_html/styles.css
body {
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
	background-attachment: fixed;
	font-family: FontAwesome, "Courier New", sans-serif;
	background-color: #dbdbdb;
}

header {
	background-image: url("ocean.jpg");
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
	color: white;
	box-shadow: 0px 0px 5px 8px rgba(0,0,0,0.40);
}

.smaller {
	max-width: 90%;
}

.elizabeth {
	position: absolute;
	left:700px;
}

.text {
	position: absolute;
	top:200px;
}

.section-text {
	font-weight: bold;
	font-size: 3em;
}



img[src*="adel"]{
	border-radius: 50%;
}

div[class*="header-text"]{
	font-weight: bold;
	font-size: 2em;
}

.nav-item{
	font-weight: bold;
	font-size: 1em;
}

.carousel-inner img {
	width: 90%;
	height: 30em;
	margin: auto;
}

footer {
	background-color: teal;
	box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.40);
	color: white;
}

.navbar-custom .navbar-nav .nav-link {
	color: white;
}

.navbar-custom .nav-item.active .nav-link,
.navbar-custom .nav-item:hover .nav-link {
	color: white;
	background-color: teal;
}

.contact-links {
	color: black;
}

.carousel {
	box-shadow: 0px 0px 5px 10px rgba(0,0,0,0.40);
}

.form-control {
	box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.40);
}

.btn-primary,
.btn-primary.active {
	background-color: #437c76 !important;
	border-color: #437c76 !important;
}

.btn-primary:hover {
	background-color: #58a39b;
	border-color: #58a39b;
}

/*@keyframes fade {*/
	/*0% {*/
		/*opacity: 0;}*/
		/*100% {*/
			/*opacity: 100%;*/
		/*}*/
/*}*/
.img-fluid{
	animation: fade 2s linear;
}

